@@ -10,7 +10,7 @@ TODO --- things that needs to be done with Daisy -*- outline -*-
 
 1) Fjern 1D antagelser fra OM, bioinc
 
-2) Fjern 1D antagelser fra log table, select content & interval.
+2) Fjern 1D antagelser fra select content & interval.
 
 Interval:
   Hvis geo er nu
@@ -19,8 +19,6 @@ Interval:
 
 Content:
   content_at
-
-3) transport, macrotrans: 1D
 
 ** B) Rect
 
@@ -108,7 +106,7 @@ ridge, uz*, macro*, groundwater*
 
 ** Done 3
 
-*** select_flux_top.C, select_flux_bottom.C
+*** select_flux_top.C, select_flux_bottom.C, log table,C
 
 Generalized to handle 2D geometry.
 
@@ -119,6 +117,8 @@ Removed transport.
 *** soltrans1D.C
 
 New transport module.
+
+*** transport, macrotrans: 1D
 
 * IDE: CT laver "sample setups" for hvert FON land 
 
